samples/_failures_safe/1761464180_0cca26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47f437aa.c: In function ‘print_instructions’:
./samples/SAFE/__tmp_47f437aa.c:202:12: error: missing terminating " character
  202 |     printf("Available commands:
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_47f437aa.c:202:5: error: expected expression at end of input
  202 |     printf("Available commands:
      |     ^~~~~~
./samples/SAFE/__tmp_47f437aa.c:202:5: error: expected declaration or statement at end of input
